src/styles.scss
/* You can add global styles to this file, and also import other style files */
@use "vars" as *;

@import 'keen-slider/keen-slider.min.css';
@import 'material-icons/iconfont/material-icons.css';

h1 {
  color : $header-font-color;
}

.card-carrousel-item{
  display: flex;
  flex-direction: column;
  justify-content: center;
  border-radius: 10px;
  background: white;
  color: #4d4b4b;
  font-size: 50px;
  font-weight: 500;
  height: 100%;
  width: 100%;
  max-width: 160px;
}

.card-header {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 20px;
  padding-bottom: 20px;
  text-align: center;
  background: $navbar-bg-color;
  color: $navbar-icon-color;
  width: 100%;
  font-size: 20px;
  min-height: 80px;
}

.card-content {
  margin-top: auto;
}

#notification {
  position: fixed;
  bottom: 0;
  width: 100%;
  opacity: 1;
  z-index: 10;
}

.notification-success {
  background-color: #d4edda;
  color: #155724;
  border-top: 1px solid #c3e6cb;
  padding: 12px 16px;
}

.notification-danger {
  background-color: #f8d7da;
  color: #721c24;
  border-top: 1px solid #f5c6cb;
  padding: 12px 16px;
}

.image-with-data {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  padding: 16px;

  img {
    width: 40%;
    height: 40%;
    max-width: 60px;
  }
  p {
    font-size: 15px;
    margin: 0;
    text-align: end;
  }
}

